[package]
name = "js-runtime"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {git = "https://github.com/exerum/tokio", branch = "wasmer-wasm32-wasi", features = [ "rt", "net", "time" ] }
protocol = { git = "https://github.com/exerum/protocol" }
bincode = "1.3.3"
swc = "0.81.1"
swc_common = { version = "0.14.3", features = ["tty-emitter"] }
swc_ecma_ast = "0.56.0"
swc_ecma_parser = "0.76.3"
swc_ecma_codegen = "0.78.1"
swc_ecma_loader = "0.23.0"
swc_bundler = "0.79.0"
swc_atoms = "0.2.9"
anyhow = "1.0.44"
walkdir = "2.3.2"
relative-path = "1.5.0"

[dependencies.rquickjs]
git = "https://github.com/exerum/quickrs"
default-features = false
version = "0.1.3"
features = ["exports", "loader", "futures", "tokio"]
branch = "wasm32-wasi"

[patch.crates-io]
mio = { git = "https://github.com/exerum/mio", branch = "wasmer-wasm32-wasi-beta" }
tokio = { git = "https://github.com/exerum/tokio", branch = "wasmer-wasm32-wasi" }