[workspace]
members = [
    "runtime",
    "stdlib",
    "exerum-wasm32-wasi",
    "swc-tools",
    "transpilers",
    "transpiler-typescript",
    "transpiler-jsx"
]

[patch.crates-io]
mio = { git = "https://github.com/exerum/mio", branch = "wasmer-wasm32-wasi-beta" }
tokio = { git = "https://github.com/exerum/tokio", branch = "wasmer-wasm32-wasi" }