[package]
name = "exerum-wasm32-wasi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.18"
bincode = "1.3.3"
runtime = { path = "../runtime" }
tokio = {git = "https://github.com/exerum/tokio", branch = "wasmer-wasm32-wasi", features = [ "rt", "net", "time" ] }
protocol = { git = "git://git@github.com/exerum/protocol" }
transpilers = { path = "../transpilers" }
transpiler-typescript = { path = "../transpiler-typescript", optional = true }
transpiler-jsx = { path = "../transpiler-jsx", optional = true }
transpiler-js = { path = "../transpiler-js" }

[features]
ts = ["transpiler-typescript"]
jsx = ["transpiler-jsx"]

[dependencies.rquickjs]
git = "https://github.com/exerum/quickrs"
default-features = false
version = "0.1.3"
features = ["exports", "loader", "futures", "tokio"]
branch = "wasm32-wasi"
