[package]
name = "stdlib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dependencies.rquickjs]
git = "https://github.com/exerum/quickrs"
default-features = false
version = "0.1.3"
features = ["exports", "loader", "futures", "tokio" ]
branch = "wasm32-wasi"