[package]
name = "transpiler-jsx"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
transpilers = { path = "../transpilers" }
swc_common = { version = "0.14.3", features = ["tty-emitter"] }
swc_ecma_codegen = "0.80.0"
swc_ecma_parser = "0.78.12"
swc_ecma_ast = "0.58.1"
swc_ecma_transforms_base = "0.44.5"
swc_ecma_transforms_react = "0.61.0"
swc_ecma_visit = "0.44.1"