[package]
name = "transpiler-typescript"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
transpilers = { path = "../transpilers" }
swc_common = { version = "0.29.37", features = ["tty-emitter"] }
swc_ecma_codegen = "0.135.4"
swc_ecma_parser = "0.130.3"
swc_ecma_ast = "0.100.1"
swc_ecma_transforms_base = "0.122.5"
swc_ecma_transforms_react = "0.167.7"
swc_ecma_visit = "0.86.1"
swc_ecma_transforms_typescript = "0.171.7"